@@ -13,6 +13,7 @@
 #include "../../src/utils/macros.h"
 #include "../../src/utils/path.h"
 #include "../../src/utils/str.h"
+#include "../../src/filelist.h"
 #include "../../src/fileops.h"
 #include "../../src/ops.h"
 #include "../../src/undo.h"
@@ -38,6 +39,12 @@ SETUP()
 
 	/* rwin */
 	strcpy(rwin.curr_dir, ".");
+
+	rwin.list_rows = 0;
+	rwin.filtered = 0;
+	rwin.list_pos = 0;
+	rwin.dir_entry = NULL;
+	assert_int_equal(0, filter_init(&rwin.local_filter.filter, 0));
 
 	curr_view = &lwin;
 	other_view = &rwin;
@@ -159,6 +166,29 @@ TEST(make_absolute_link, IF(not_windows))
 	assert_true(is_path_absolute(link_value));
 
 	(void)unlink(link_name);
+}
+
+TEST(refuse_to_copy_or_move_to_source_files_with_the_same_name)
+{
+	assert_false(flist_custom_active(&rwin));
+
+	flist_custom_start(&rwin, "test");
+	flist_custom_add(&rwin, TEST_DATA_PATH "/existing-files/a");
+	flist_custom_add(&rwin, TEST_DATA_PATH "/rename/a");
+	assert_true(flist_custom_finish(&rwin, 0) == 0);
+
+	curr_view = &rwin;
+	other_view = &lwin;
+
+	rwin.dir_entry[0].marked = 1;
+	rwin.dir_entry[1].marked = 1;
+	rwin.selected_files = 2;
+	(void)cpmv_files(&rwin, NULL, 0, CMLO_COPY, 0);
+	(void)cpmv_files(&rwin, NULL, 0, CMLO_COPY, 1);
+	(void)cpmv_files(&rwin, NULL, 0, CMLO_MOVE, 0);
+	(void)cpmv_files(&rwin, NULL, 0, CMLO_MOVE, 1);
+
+	assert_false(path_exists("a", NODEREF));
 }
 
 static void
