@@ -209,6 +209,9 @@
 
 	Fixed check for broken link existence in custom views (were dereferenced).
 
+	Fixed missing check for duplicated source file names in custom views on
+	file operations.  Thanks to filterfalse.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
